test/ui/tests/lowering/public-not-allowed-on-module-headers.stderr
error[E013]: attribute `public` is ascribed to a module header declaration
 --> ${TEST_FOLDER}/lowering/public-not-allowed-on-module-headers.lushui:3:1
  |
3 | @(public self)
  | ^^^^^^^^^^^^^^ misplaced attribute
  |
 --> ${TEST_FOLDER}/lowering/public-not-allowed-on-module-headers.lushui:4:1
  |
4 | module
  | ------ incompatible item
  |
 note: attribute `public` can only be ascribed to declarations except constructors and module headers

error: aborting due to previous error
 note: the error E013 has a detailed explanation
 help: run `lushui explain E013` to view it

